# Zero-Shot-Protein-Operators

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_GENERATION_1_COMPLETE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_REPORT.md  DEVELOPMENT.md  Dockerfile  FINAL_REPORT.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  PUBLICATION_READY_SUMMARY.md  README.md  RESEARCH_README.md  RESEARCH_VALIDATION.md  SDLC_ANALYSIS.md  SECURITY.md  autonomous_quality_gates.py  basic_demo.py  ci-cd-template.yml  demo_autonomous_protein_design.py  demo_enhanced_capabilities.py  docker-compose.prod.yml  docker-compose.yml  environment.yml  fix_imports.py  global_demo.py  global_results.json  mock_numpy.py  mock_psutil.py  (+15 more)
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci.yml
docker/: .env.production
docker/config/: production.yaml
docs/: API_REFERENCE.md  ARCHITECTURE_GUIDE.md  AUTONOMOUS_SDLC_DOCUMENTATION.md  RESEARCH_PAPER.md  ROADMAP.md
docs/adr/: 0000-template.md  0001-neural-operator-architecture.md
experiments/: README.md
k8s/: advanced-production-orchestration.yaml  autonomous-sdlc-production.yaml  configmap.yaml  deployment.yaml  global-research-infrastructure.yaml  gpu-deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pvc.yaml  rbac.yaml  service.yaml
monitoring/: alertmanager.yaml  deploy-monitoring.sh  grafana.yaml  prometheus.yaml  rbac.yaml
notebooks/: research_demonstration.ipynb
scripts/: comprehensive_quality_gates.py  deploy_global_research.sh  deploy_production.sh  quality_gates.py  quality_gates_runner.py  research_quality_gates.py  run_quality_gates.py  setup.py
scripts/deployment/: deploy.sh  rollback.sh  scale.sh
src/protein_operators/: __init__.py  autonomous_validation.py  cli.py  core.py  enhanced_core.py  global_framework.py  robust_core.py  robust_framework.py  scaling_framework.py  structure.py  version.py
src/protein_operators/api/: __init__.py  app.py  middleware.py  models.py  routes.py
src/protein_operators/benchmarks/: __init__.py  advanced_comparative_studies.py  benchmark_suite.py  datasets.py  metrics.py  statistical_tests.py
src/protein_operators/cache/: __init__.py  cache_manager.py
src/protein_operators/constraints/: __init__.py  advanced_biophysical.py  base.py  biophysical.py  functional.py  structural.py
src/protein_operators/data/: __init__.py  generator.py
src/protein_operators/database/: __init__.py  connection.py  models.py  repositories.py
src/protein_operators/infrastructure/: distributed_coordinator.py  distributed_training.py
src/protein_operators/models/: __init__.py  base.py  deeponet.py  enhanced_deeponet.py  fno.py  gno.py  multiscale_no.py
src/protein_operators/optimization/: advanced_optimizers.py
src/protein_operators/pde/: __init__.py  folding.py
src/protein_operators/research/: __init__.py  adaptive_dynamics.py  advanced_research_framework.py  paper_experiments.py  quantum_classical_hybrid.py  quantum_operators.py  reproducibility.py  theoretical_analysis.py
src/protein_operators/services/: __init__.py  advanced_design_service.py  analysis_service.py  design_service.py  optimization_service.py  validation_service.py
src/protein_operators/training/: __init__.py  trainer.py
src/protein_operators/utils/: adaptive_caching.py  advanced_error_handling.py  advanced_health_monitoring.py  advanced_logger.py  advanced_monitoring.py  advanced_security_framework.py  auto_scaling.py  comprehensive_validation.py  config_manager.py  configuration_manager.py  distributed_processing.py  error_handling.py  error_recovery.py  health_monitoring.py  logging_config.py  (+12 more)
tests/: __init__.py  conftest.py  run_validation_tests.py  test_core.py  test_performance_standalone.py  test_performance_systems.py  test_robust_systems.py  test_validation_standalone.py  test_validation_system.py  test_zspo.py
tests/benchmarks/: test_performance_benchmarks.py
tests/integration/: test_autonomous_sdlc_system.py  test_full_pipeline.py
tests/unit/: test_api.py  test_core.py  test_models.py
zspo/: __init__.py  backbone.py  evaluator.py  generator.py  neural_operator.py  pde_encoder.py
(+7 files in other folders)
